8.0.0
	+ Set version number 8.0
	+ Initial release