@@ -1,3 +1,5 @@
+HEAD
+	+ Improve docker container handling
 8.0.0
 	+ Set version number 8.0
 	+ Initial release
